# nynoir-manhattan-3d-map

./: .gitignore  CLAUDE.md  Makefile  README.md  RESULTS_SUMMARY.md  align.py  all.sh  batch.sh  block_trace.py  combine.py  dbnet_detect.py  detect_buildings.py  editor.html  editor.py  generate_stl.py  inpaint_text.py  main.py  pyproject.toml  segment.py  segmentation.json  visualize_edges.py  volume2.json
01-text-inpainting/: text_removal.py
02-color-segmentation/: color_segment.py
04-hybrid/: hybrid_extraction.py
05-svg-cleanup/results/: analysis.json
06-block-trace/: block_trace.py
07-text-detect/: text_detect.py
old-experiments/03-edge-morph/: edge_extract.py
old-experiments/05-svg-cleanup/: svg_cleanup.py
old-experiments/05-svg-cleanup/results/: ocr_cache.json
old-experiments/06-block-trace/: block_trace.py
output/: .gitignore
utils/: __init__.py  svg_output.py  visualization.py
webviewer/: index.html
