[project]
name = "map-extraction-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "easyocr>=1.7.2",
    "numpy>=2.4.0",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "scikit-image>=0.26.0",
    "shapely>=2.1.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
