[project]
name = "map-extraction-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "craft-text-detector>=0.4.1",
    "easyocr>=1.7.2",
    "lxml>=6.0.2",
    "numpy>=2.4.0",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "scikit-image>=0.26.0",
    "shapely>=2.1.2",
    "svgpathtools>=1.7.2",
    "simple-lama-inpainting>=0.1.0",
    "python-doctr[torch]>=0.11.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
